--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     ],
     
     "require": {
-        "php": ">=5.3.0",
-        "ext-fileinfo" : "*"
+        "php": ">=5.3.0"
     },
     "autoload": {
         "psr-4": {
